fromYaml: allow duplicate keys (last wins) and surface parse errors (closes grafana-mimir) (#396)
bitnami/grafana-mimir's mimir.yaml ConfigMap rendered as `{}` — all 16 config
stanzas (activity_tracker, blocks_storage, server, …) dropped. The chart builds
the config via `mergeOverwrite (tpl .Values.mimir.configuration | fromYaml) …`.
The tpl render was correct, but the generated YAML repeats a top-level key
(`ingester:` appears twice). Helm parses via sigs.k8s.io/yaml (YAML -> JSON ->
Go), where a duplicate key silently takes the last value; jhelm's SnakeYAML
Engine rejects duplicates by default, so fromYaml threw and returned an empty
map — wiping the whole document.

- Allow duplicate mapping keys (last wins) in the fromYaml/fromYamlArray load
  settings (setAllowDuplicateKeys(true)), matching Helm/Go.
- Stop silently swallowing parse failures into an empty map/list. Helm's fromYaml
  returns `{"Error": err}` and fromYamlArray returns `[err]` on a parse error;
  jhelm now does the same, so a real parse failure is visible instead of masked
  as empty (the empty-map swallow is exactly what hid this bug).

Adds ConversionFunctionsTest cases for duplicate-key last-wins and the Error-key
parse-failure behavior. Full 316-chart comparison suite + all jhelm-gotemplate-helm
unit tests pass with zero regressions; promotes bitnami/grafana-mimir from
failed.csv to charts.csv (315 -> 316).

Co-authored-by: Claude Opus 4.8 (1M context) <noreply@anthropic.com>